# cplus-guide

./: .gitignore  CMakeLists.txt  README.md  main.cpp
foundation/: CMakeLists.txt  foundation.cpp
foundation/foundation/: CMakeLists.txt  foundation.h  main.cpp
foundation/foundation/t_char/: main.cpp
foundation/foundation/t_double/: main.cpp
foundation/foundation/t_int/: main.h
foundation/foundation/t_long/: CMakeLists.txt
foundation/t_bool/: main.h
foundation/t_char/: CMakeLists.txt
foundation/t_class/const_function/: CMakeLists.txt  main.cpp  main.h
foundation/t_class/const_object/: CMakeLists.txt  main.cpp  main.h
foundation/t_class/constructor/: CMakeLists.txt  main.cpp  people.cpp  people.h
foundation/t_class/copy_constructor/: CMakeLists.txt  main.cpp  main.h  people.cpp  people.h
foundation/t_class/extend/: CMakeLists.txt  main.cpp
foundation/t_class/first_identify/: CMakeLists.txt  main.cpp
foundation/t_class/friend_class/: CMakeLists.txt  main.cpp
foundation/t_class/friend_function/: CMakeLists.txt  main.cpp
foundation/t_class/friend_global_function/: CMakeLists.txt  main.cpp
foundation/t_class/function_template/: CMakeLists.txt
foundation/t_class/introduce/: CMakeLists.txt
foundation/t_class/operator_overload/: CMakeLists.txt
foundation/t_class/virtual_function/: CMakeLists.txt
foundation/t_float/: CMakeLists.txt
foundation/t_int/: CMakeLists.txt
foundation/t_long_int/: CMakeLists.txt
foundation/t_long_long/: main.cpp
foundation/t_reference/: CMakeLists.txt  main.cpp
foundation/t_short_int/: CMakeLists.txt
(+40 files in other folders)
